# pid-tag-ocr

./: .gitignore  README.md  [청사진]PID_OCR.ipynb  build_grammar.py  pyproject.toml
.github/workflows/: pages.yml
data/: isa_5_1.json
data/grammar/: grammar_masks.csv
src/pid_tag_ocr/: __init__.py  grammar.py  metrics.py  token_types.py  validate.py
src/pid_tag_ocr/data/grammar/: grammar_conf.csv  grammar_vocab.csv
src/pid_tag_ocr/standards/: __init__.py  isa.py  references.py
tests/: test_core.py  verify_js_port.mjs
web/: app.js  grammar.js  index.html  styles.css
web/data/: grammar_slots.csv
